->文件上传->删除

--- a/index.html
+++ b/index.html
@@ -36,15 +36,8 @@
                 <td>是否删除</td>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>zh.jpg</td>
-                <td>2.3M</td>
-                <td>2018-11-13</td>
-                <td>3</td>
-                <td><input type="button" class="btn btn-default btn-danger btn-xs" name="" value="删除"></td>
-            </tr>
+        <tbody id="fileWrap">
+            
         </tbody>
     </table>
     <div class="form-wrap">     
